p.nirhub.ru/etc/iptables/rules.v4
*mangle
:PREROUTING ACCEPT 
:INPUT ACCEPT 
:FORWARD ACCEPT 
:OUTPUT ACCEPT 
:POSTROUTING ACCEPT 
-A FORWARD -s 10.10.10.0/24 -o eth0 -p tcp -m policy --dir in --pol ipsec -m tcp --tcp-flags SYN,RST SYN -m tcpmss --mss 1361:1536 -j TCPMSS --set-mss 1360
COMMIT
*nat
:PREROUTING ACCEPT 
:INPUT ACCEPT 
:OUTPUT ACCEPT 
:POSTROUTING ACCEPT 
:DOCKER - 
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 10.10.10.0/24 -o eth0 -m policy --dir out --pol ipsec -j ACCEPT
-A POSTROUTING -s 10.10.10.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.168.0.0/14 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.8.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.0.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.0.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.0.1.2/32 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.42.0.2/32 -j MASQUERADE
-A POSTROUTING -s 10.42.0.2/32 -j MASQUERADE
-A POSTROUTING -s 10.42.0.2/32 -j MASQUERADE
-A POSTROUTING -s 10.200.0.0/24 -o eth0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
*filter
:INPUT DROP 
:FORWARD ACCEPT 
:OUTPUT ACCEPT 
:DOCKER - 
:DOCKER-BRIDGE - 
:DOCKER-CT - 
:DOCKER-FORWARD - 
:DOCKER-ISOLATION-STAGE-1 - 
:DOCKER-ISOLATION-STAGE-2 - 
:DOCKER-USER - 
:ufw-after-forward - 
:ufw-after-input - 
:ufw-after-logging-forward - 
:ufw-after-logging-input - 
:ufw-after-logging-output - 
:ufw-after-output - 
:ufw-before-forward - 
:ufw-before-input - 
:ufw-before-logging-forward - 
:ufw-before-logging-input - 
:ufw-before-logging-output - 
:ufw-before-output - 
:ufw-logging-allow - 
:ufw-logging-deny - 
:ufw-not-local - 
:ufw-reject-forward - 
:ufw-reject-input - 
:ufw-reject-output - 
:ufw-skip-to-policy-forward - 
:ufw-skip-to-policy-input - 
:ufw-skip-to-policy-output - 
:ufw-track-forward - 
:ufw-track-input - 
:ufw-track-output - 
:ufw-user-forward - 
:ufw-user-input - 
:ufw-user-limit - 
:ufw-user-limit-accept - 
:ufw-user-logging-forward - 
:ufw-user-logging-input - 
:ufw-user-logging-output - 
:ufw-user-output - 
-A INPUT -j ufw-before-logging-input
-A INPUT -j ufw-before-input
-A INPUT -j ufw-after-input
-A INPUT -j ufw-after-logging-input
-A INPUT -j ufw-reject-input
-A INPUT -j ufw-track-input
-A INPUT -s 95.84.228.10/32 -p ipencap -j ACCEPT
-A INPUT -p gre -j ACCEPT
-A INPUT -p gre -j ACCEPT
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A FORWARD -j ufw-before-logging-forward
-A FORWARD -j ufw-before-forward
-A FORWARD -j ufw-after-forward
-A FORWARD -j ufw-after-logging-forward
-A FORWARD -j ufw-reject-forward
-A FORWARD -j ufw-track-forward
-A FORWARD -i tun10 -j ACCEPT
-A FORWARD -o tun10 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i tun10 -j ACCEPT
-A FORWARD -o tun10 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i tun42 -j ACCEPT
-A FORWARD -o tun42 -j ACCEPT
-A FORWARD -i gre42 -j ACCEPT
-A FORWARD -o gre42 -j ACCEPT
-A FORWARD -i wg200 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -o wg200 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wg200 -j ACCEPT
-A FORWARD -o wg200 -j ACCEPT
-A OUTPUT -j ufw-before-logging-output
-A OUTPUT -j ufw-before-output
-A OUTPUT -j ufw-after-output
-A OUTPUT -j ufw-after-logging-output
-A OUTPUT -j ufw-reject-output
-A OUTPUT -j ufw-track-output
-A OUTPUT -d 95.84.228.10/32 -p ipencap -j ACCEPT
-A OUTPUT -p gre -j ACCEPT
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-ISOLATION-STAGE-1
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-USER -j RETURN
-A ufw-after-input -p udp -m udp --dport 137 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 138 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp -m tcp --dport 139 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp -m tcp --dport 445 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 67 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 68 -j ufw-skip-to-policy-input
-A ufw-after-input -m addrtype --dst-type BROADCAST -j ufw-skip-to-policy-input
-A ufw-after-logging-input -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-before-forward -s 10.10.10.0/24 -m policy --dir in --pol ipsec --proto esp -j ACCEPT
-A ufw-before-forward -d 10.10.10.0/24 -m policy --dir out --pol ipsec --proto esp -j ACCEPT
-A ufw-before-forward -s 10.8.0.0/24 -j ACCEPT
-A ufw-before-forward -d 10.8.0.0/24 -j ACCEPT
-A ufw-before-forward -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 4 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A ufw-before-forward -j ufw-user-forward
-A ufw-before-input -i lo -j ACCEPT
-A ufw-before-input -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-input -m conntrack --ctstate INVALID -j ufw-logging-deny
-A ufw-before-input -m conntrack --ctstate INVALID -j DROP
-A ufw-before-input -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 4 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A ufw-before-input -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A ufw-before-input -j ufw-not-local
-A ufw-before-input -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j ACCEPT
-A ufw-before-input -d 239.255.255.250/32 -p udp -m udp --dport 1900 -j ACCEPT
-A ufw-before-input -j ufw-user-input
-A ufw-before-output -o lo -j ACCEPT
-A ufw-before-output -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-output -j ufw-user-output
-A ufw-logging-allow -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-logging-deny -m conntrack --ctstate INVALID -m limit --limit 3/min --limit-burst 10 -j RETURN
-A ufw-logging-deny -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-not-local -m addrtype --dst-type LOCAL -j RETURN
-A ufw-not-local -m addrtype --dst-type MULTICAST -j RETURN
-A ufw-not-local -m addrtype --dst-type BROADCAST -j RETURN
-A ufw-not-local -m limit --limit 3/min --limit-burst 10 -j ufw-logging-deny
-A ufw-not-local -j DROP
-A ufw-skip-to-policy-forward -j ACCEPT
-A ufw-skip-to-policy-input -j DROP
-A ufw-skip-to-policy-output -j ACCEPT
-A ufw-track-forward -p tcp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-track-forward -p udp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-track-output -p tcp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-track-output -p udp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-user-forward -i wg168 -o eth0 -j ACCEPT
-A ufw-user-forward -i wg200 -o eth0 -j ACCEPT
-A ufw-user-forward -s 10.200.0.0/24 -j ACCEPT
-A ufw-user-forward -d 10.200.0.0/24 -j ACCEPT
-A ufw-user-input -s 10.8.0.0/24 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 54321 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 22 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 65432 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 65432 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 1080 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 1080 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 65480 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 65480 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 22 -m comment --comment "\'dapp_OpenSSH\'" -j ACCEPT
-A ufw-user-input -p udp -m multiport --dports 500,4500 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 32322 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 22 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 1194 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 1194 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 500 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 4500 -j ACCEPT
-A ufw-user-input -p esp -j ACCEPT
-A ufw-user-input -p ah -j ACCEPT
-A ufw-user-input -s 10.0.0.0/8 -p tcp -m tcp --dport 53 -j ACCEPT
-A ufw-user-input -s 10.0.0.0/8 -p udp -m udp --dport 53 -j ACCEPT
-A ufw-user-input -s 172.16.0.0/12 -p tcp -m tcp --dport 53 -j ACCEPT
-A ufw-user-input -s 172.16.0.0/12 -p udp -m udp --dport 53 -j ACCEPT
-A ufw-user-input -s 192.168.0.0/16 -p tcp -m tcp --dport 53 -j ACCEPT
-A ufw-user-input -s 192.168.0.0/16 -p udp -m udp --dport 53 -j ACCEPT
-A ufw-user-input -s 95.216.102.251/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A ufw-user-input -s 95.216.102.251/32 -p udp -m udp --dport 53 -j ACCEPT
-A ufw-user-input -s 95.216.102.251/32 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 5776 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 5776 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 58094 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 58094 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 5776 -j ACCEPT
-A ufw-user-input -s 192.168.0.0/16 -j ACCEPT
-A ufw-user-input -s 127.0.0.1/32 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 444 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 444 -j ACCEPT
-A ufw-user-input -s 95.84.228.10/32 -j ACCEPT
-A ufw-user-input -s 10.0.0.0/24 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 80 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 80 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 443 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 443 -j ACCEPT
-A ufw-user-input -p tcp -m tcp --dport 4242 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 4242 -j ACCEPT
-A ufw-user-input -p udp -m udp --dport 12345 -j ACCEPT
-A ufw-user-input -p ipencap -j ACCEPT
-A ufw-user-input -i ipip42 -j ACCEPT
-A ufw-user-input -s 10.42.0.0/30 -j ACCEPT
-A ufw-user-limit -m limit --limit 3/min -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT --reject-with icmp-port-unreachable
-A ufw-user-limit-accept -j ACCEPT
COMMIT
